--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@
 }
 
 body{
-    background: linear-gradient(to right,white,teal);
+    background-color:black;
     display: flex;
     justify-content: center;
     height: 100vh;
 }
 
 .container{
-    background: linear-gradient(to top,black,royalblue);
+    background: linear-gradient(to top,black,royalblue,lightblue);
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -62,7 +62,7 @@ body{
 }
 
 #strikebutton{
-    background:linear-gradient(to bottom,rgb(34, 16, 102),rgb(32, 250, 239));
+    background-color: black;
     width: 300px;
     height: 30px;
     font-size: large;
@@ -76,7 +76,6 @@ body{
 #result{
     font-size: x-large;
     color: white;
-    background:linear-gradient(to right,maroon,black) ;
     text-align: center;
     margin-top: 50px;
     border-radius: 25px;
